# sasecloudmap-data

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  sasecloudmap-location-clustering.patch
.github/workflows/: update_dev.yaml  update_dev_unified.yaml  update_main.yaml  update_sources.yaml
provider_data/: aws_geojson.py  catonetworks.py  checkpoint_geojson.py  cisco_umbrella_geojson.py  cloudflare_geojson.py  fastly_geojson.py  forcepoint_geojson.py  fortinet_geojson.py  googlecloud_geojson.py  iboss_geojson.py  netskope_geojson.py  oracle_geojson.py  paloalto_geojson.py  run_all.py  zscaler_geojson.py
provider_data/utils/: base.py  browser_rendering.py  finalize_dev_update.py  generate_sitemap.py  geocoding.py  http.py  output.py  post_data.py  provider_discovery.py  skeleton.py  update_proxy_endpoint.py  upload_to_r2.py  validate_provider_snapshot.py  validate_snapshot.py  workflow_status.py
src/provider_data/: __init__.py  catonetworks.py  checkpoint_geojson.py  cisco_umbrella_geojson.py  cloudflare_geojson.py  forcepoint_geojson.py  fortinet_geojson.py  iboss_geojson.py  netskope_geojson.py  paloalto_geojson.py  zscaler_geojson.py
tests/: test_browser_rendering.py  test_geocoding.py  test_geojson.py  test_http_config.py  test_output_safety.py  test_provider_scrapers.py  test_snapshot_validation.py  test_update_proxy_endpoint.py  test_utils.py  test_workflow_ci.py
