[project]
name = "provider-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.9",
    "httpx>=0.28",
    "beautifulsoup4>=4",
    "pytest-playwright>=0.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = true
